Updated Jaxon v4 integration.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Do not commit Eclipse files
 .project
 .settings/*
+.idea/
 vendor/
 composer.lock
-.idea/
-/build/
+build/
 .phpunit.result.cache
