--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "source": "https://github.com/jaxon-php/jaxon-yii"
     },
     "require": {
-        "jaxon-php/jaxon-core": "^4.0",
+        "jaxon-php/jaxon-core": "v5.x-dev",
         "yiisoft/yii2": "~2.0.14"
     },
     "autoload": {
