--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
         "source": "https://github.com/jaxon-php/jaxon-yii"
     },
     "require": {
-        "jaxon-php/jaxon-core": "^4.0",
-        "yiisoft/yii2": "~2.0.14"
+        "jaxon-php/jaxon-core": "^5.0",
+        "yiisoft/yii2": "^2.0"
     },
     "autoload": {
         "psr-4": {
@@ -22,5 +22,10 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "config": {
+        "allow-plugins": {
+            "yiisoft/yii2-composer": true
+        }
+    }
 }
